--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -19,15 +19,13 @@ leptos.workspace = true
 leptos_axum = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
-shield = { path = "../../packages/core/shield" }
-shield-leptos = { path = "../../packages/integrations/shield-leptos" }
-shield-leptos-axum = { path = "../../packages/integrations/shield-leptos-axum", features = [
+shield.workspace = true
+shield-leptos.workspace = true
+shield-leptos-axum = { workspace = true, features = [
     "utoipa",
 ], optional = true }
-shield-memory = { path = "../../packages/storage/shield-memory", optional = true }
-shield-oidc = { path = "../../packages/providers/shield-oidc", features = [
-    "native-tls",
-], optional = true }
+shield-memory = { workspace = true, optional = true }
+shield-oidc = { workspace = true, features = ["native-tls"], optional = true }
 time = "0.3.37"
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
 tower-sessions = { workspace = true, optional = true }
@@ -52,7 +50,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
-    "shield-memory/provider-oidc",
+    "shield-memory/method-oidc",
 ]
 
 [package.metadata.leptos]
