--- a/packages/integrations/shield-tower/Cargo.toml
+++ b/packages/integrations/shield-tower/Cargo.toml
@@ -11,7 +11,7 @@ version.workspace = true
 [dependencies]
 async-trait.workspace = true
 http.workspace = true
-shield = { path = "../../core/shield", version = "0.0.4" }
+shield.workspace = true
 tower-layer.workspace = true
 tower-service.workspace = true
 tower-sessions.workspace = true
