--- a/packages/methods/shield-webauthn/Cargo.toml
+++ b/packages/methods/shield-webauthn/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "shield-credentials"
-description = "Credentials provider for Shield."
+name = "shield-webauthn"
+description = "WebAuthn method for Shield."
 
 authors.workspace = true
 edition.workspace = true
@@ -9,4 +9,4 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-shield = { path = "../../core/shield", version = "0.0.4" }
+shield.workspace = true
