--- a/packages/storage/shield-sea-orm/Cargo.toml
+++ b/packages/storage/shield-sea-orm/Cargo.toml
@@ -15,30 +15,30 @@ sea-orm.workspace = true
 sea-orm-migration.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
-shield = { path = "../../core/shield", version = "0.0.4" }
-# shield-credentials = { path = "../../providers/shield-credentials", version = "0.0.2", optional = true }
-# shield-email = { path = "../../providers/shield-email", version = "0.0.2", optional = true }
-# shield-oauth = { path = "../../providers/shield-oauth", version = "0.0.2", optional = true }
-shield-oidc = { path = "../../providers/shield-oidc", version = "0.0.4", optional = true }
-# shield-webauthn = { path = "../../providers/shield-webauthn", version = "0.0.2", optional = true }
+shield.workspace = true
+# shield-credentials = { workspace = true, optional = true }
+# shield-email = { workspace = true, optional = true }
+# shield-oauth = { workspace = true, optional = true }
+shield-oidc = { workspace = true, optional = true }
+# shield-webauthn = { workspace = true, optional = true }
 utoipa = { workspace = true, optional = true }
 
 [features]
 default = []
 entity = []
-all-providers = [
-    # "provider-credentials",
-    "provider-email",
-    "provider-oauth",
-    "provider-oidc",
-    # "provider-webauthn",
+all-methods = [
+    # "method-credentials",
+    "method-email",
+    "method-oauth",
+    "method-oidc",
+    # "method-webauthn",
 ]
-# provider-credentials = ["dep:shield-credentials"]
-# provider-email = ["dep:shield-email"]
-# provider-oauth = ["dep:shield-oauth"]
-# provider-credentials = []
-provider-email = []
-provider-oauth = []
-provider-oidc = ["dep:shield-oidc"]
-# provider-webauthn = ["dep:shield-webauthn"]
+# method-credentials = ["dep:shield-credentials"]
+# method-email = ["dep:shield-email"]
+# method-oauth = ["dep:shield-oauth"]
+# method-credentials = []
+method-email = []
+method-oauth = []
+method-oidc = ["dep:shield-oidc"]
+# method-webauthn = ["dep:shield-webauthn"]
 utoipa = ["dep:utoipa", "shield/utoipa"]
