--- a/packages/storage/shield-sea-orm/Cargo.toml
+++ b/packages/storage/shield-sea-orm/Cargo.toml
@@ -18,7 +18,7 @@ serde_json.workspace = true
 shield.workspace = true
 # shield-credentials = { workspace = true, optional = true }
 # shield-email = { workspace = true, optional = true }
-# shield-oauth = { workspace = true, optional = true }
+shield-oauth = { workspace = true, optional = true }
 shield-oidc = { workspace = true, optional = true }
 # shield-webauthn = { workspace = true, optional = true }
 utoipa = { workspace = true, optional = true }
@@ -35,10 +35,9 @@ all-methods = [
 ]
 # method-credentials = ["dep:shield-credentials"]
 # method-email = ["dep:shield-email"]
-# method-oauth = ["dep:shield-oauth"]
 # method-credentials = []
 method-email = []
-method-oauth = []
+method-oauth = ["dep:shield-oauth"]
 method-oidc = ["dep:shield-oidc"]
 # method-webauthn = ["dep:shield-webauthn"]
 utoipa = ["dep:utoipa", "shield/utoipa"]
