--- a/packages/methods/shield-credentials/Cargo.toml
+++ b/packages/methods/shield-credentials/Cargo.toml
@@ -9,4 +9,10 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 shield.workspace = true
+
+[dev-dependencies]
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
