--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,32 +6,44 @@ on:
         branches:
             - main
 
+env:
+    RUSTFLAGS: '-Dwarnings'
+
 jobs:
     lint:
         name: Lint
         runs-on: ubuntu-latest
-
-        env:
-            RUSTFLAGS: '-Dwarnings'
 
         steps:
             - name: Checkout
               uses: actions/checkout@v4
 
             - name: Set up Rust toolchain
-              run: rustup toolchain install stable --no-self-update --profile default --target wasm32-unknown-unknown
-
-            - name: Set up Rust cache
-              uses: swatinem/rust-cache@v2
+              uses: actions-rust-lang/setup-rust-toolchain@v1
               with:
-                  cache-on-failure: true
-                  save-if: ${{ github.ref == 'refs/heads/main' }}
+                  components: clippy, rustfmt
+                  target: wasm32-unknown-unknown
+
+            - name: Install Cargo Binary Install
+              uses: cargo-bins/cargo-binstall@main
+
+            - name: Install crates
+              run: cargo binstall -y cargo-deny cargo-machete cargo-sort
+
+            - name: Lint
+              run: cargo clippy --all-features --locked
+
+            - name: Check dependencies
+              run: cargo deny check
+
+            - name: Check unused dependencies
+              run: cargo machete
+
+            - name: Check manifest formatting
+              run: cargo sort --check
 
             - name: Check formatting
               run: cargo fmt --all --check
-
-            - name: Lint
-              run: cargo clippy --all-features
 
     test:
         name: Test
@@ -62,13 +74,10 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Set up Rust toolchain
-              run: rustup toolchain install stable --no-self-update --profile default --target wasm32-unknown-unknown
-
-            - name: Set up Rust cache
-              uses: swatinem/rust-cache@v2
+              uses: actions-rust-lang/setup-rust-toolchain@v1
               with:
-                  cache-on-failure: true
-                  save-if: ${{ github.ref == 'refs/heads/main' }}
+                  components: clippy, rustfmt
+                  target: wasm32-unknown-unknown
 
             - name: Install Cargo Binary Install
               uses: cargo-bins/cargo-binstall@main
@@ -77,4 +86,4 @@ jobs:
               run: cargo binstall -y sea-orm-cli
 
             - name: Test
-              run: cargo test --all-features
+              run: cargo test --all-features --locked
