--- a/packages/integrations/shield-actix/Cargo.toml
+++ b/packages/integrations/shield-actix/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-actix-session.workspace = true
+# actix-session.workspace = true
 actix-utils.workspace = true
 actix-web.workspace = true
 shield.workspace = true
