--- a/packages/methods/shield-oauth/Cargo.toml
+++ b/packages/methods/shield-oauth/Cargo.toml
@@ -15,7 +15,9 @@ rustls-tls = ["oauth2/rustls-tls"]
 
 [dependencies]
 async-trait.workspace = true
+bon.workspace = true
 chrono.workspace = true
 oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
+secrecy.workspace = true
 serde.workspace = true
 shield.workspace = true
