--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ leptos_meta = "0.8.0-beta"
 leptos_router = "0.8.0-beta"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
+secrecy = "0.10.3"
 serde = "1.0.215"
 serde_json = "1.0.133"
 shield = { path = "./packages/core/shield", version = "0.0.4" }
