--- a/packages/integrations/shield-dioxus/Cargo.toml
+++ b/packages/integrations/shield-dioxus/Cargo.toml
@@ -9,3 +9,6 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+dioxus = { workspace = true, features = ["router"] }
+shield.workspace = true
