--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -44,6 +44,7 @@ leptos_axum = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
 shield.workspace = true
+# shield-bootstrap = { workspace = true, features = ["leptos"] }
 shield-leptos.workspace = true
 shield-leptos-axum = { workspace = true, features = [
     "utoipa",
