--- a/packages/integrations/shield-dioxus/Cargo.toml
+++ b/packages/integrations/shield-dioxus/Cargo.toml
@@ -8,7 +8,12 @@ license.workspace = true
 repository.workspace = true
 version.workspace = true
 
+[features]
+server = ["dioxus/server"]
+
 [dependencies]
 async-trait.workspace = true
-dioxus = { workspace = true, features = ["router"] }
+dioxus = { workspace = true, features = ["fullstack", "router"] }
+dioxus-server = { workspace = true, default-features = true }
+serde_json.workspace = true
 shield.workspace = true
