--- a/packages/integrations/shield-leptos/Cargo.toml
+++ b/packages/integrations/shield-leptos/Cargo.toml
@@ -11,5 +11,7 @@ version.workspace = true
 [dependencies]
 async-trait.workspace = true
 leptos.workspace = true
+leptos_router.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 shield.workspace = true
