fix: add workaround for Dioxus server extract

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,15 @@ axum = "0.8.1"
 bon = "3.3.2"
 chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
-dioxus = "0.7.0-alpha.1"
-dioxus-server = { version = "0.7.0-alpha.1", default-features = false }
+dioxus = "0.7.0-rc.0"
+dioxus-server = { version = "0.7.0-rc.0" }
 futures = "0.3.31"
 http = "1.2.0"
-leptos = "0.8.0-beta"
-leptos_actix = "0.8.0-beta"
-leptos_axum = "0.8.0-beta"
-leptos_meta = "0.8.0-beta"
-leptos_router = "0.8.0-beta"
+leptos = "0.8.3"
+leptos_actix = "0.8.3"
+leptos_axum = "0.8.3"
+leptos_meta = "0.8.3"
+leptos_router = "0.8.3"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
 secrecy = "0.10.3"
