--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
               run: cargo binstall -y --force cargo-deny cargo-machete cargo-sort
 
             - name: Lint
-              run: cargo clippy --all-features --locked
+              run: cargo clippy --locked
 
             - name: Check dependencies
               run: cargo deny check
@@ -86,4 +86,4 @@ jobs:
               run: cargo binstall -y sea-orm-cli
 
             - name: Test
-              run: cargo test --all-features --locked
+              run: cargo test --locked
