feat(workos): add index redirect and authorization URL redirect

--- a/examples/workos/Cargo.toml
+++ b/examples/workos/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "shield-examples-diouxs-axum"
-description = "Example with Dioxus and Axum."
+name = "shield-examples-workos"
+description = "Example with WorkOS."
 publish = false
 
 authors.workspace = true
@@ -17,12 +17,11 @@ server = [
     "dep:axum",
     "dep:shield-dioxus-axum",
     "dep:shield-memory",
-    "dep:shield-oidc",
+    "dep:shield-workos",
     "dep:tokio",
     "dep:tower-sessions",
     "dioxus/server",
     "shield-dioxus/server",
-    "shield-memory/method-oidc",
 ]
 web = ["dioxus/web"]
 
@@ -34,7 +33,7 @@ shield-bootstrap = { workspace = true, features = ["dioxus"] }
 shield-dioxus.workspace = true
 shield-dioxus-axum = { workspace = true, optional = true }
 shield-memory = { workspace = true, optional = true }
-shield-oidc = { workspace = true, features = ["native-tls"], optional = true }
+shield-workos = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
 tower-sessions = { workspace = true, optional = true }
 tracing.workspace = true
