--- a/packages/methods/shield-oauth/Cargo.toml
+++ b/packages/methods/shield-oauth/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 repository.workspace = true
 version.workspace = true
 
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
+
 [features]
 default = []
 native-tls = ["oauth2/native-tls"]
@@ -20,4 +23,5 @@ chrono.workspace = true
 oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
 secrecy.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 shield.workspace = true
