--- a/packages/integrations/shield-axum/Cargo.toml
+++ b/packages/integrations/shield-axum/Cargo.toml
@@ -13,9 +13,10 @@ default = []
 utoipa = ["dep:utoipa", "shield/utoipa"]
 
 [dependencies]
-axum.workspace = true
+axum = { workspace = true, features = ["macros"] }
 serde.workspace = true
 serde_json.workspace = true
 shield.workspace = true
 shield-tower.workspace = true
 utoipa = { workspace = true, features = ["axum_extras"], optional = true }
+utoipa-axum.workspace = true
