--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,15 +33,16 @@ actix-files = "0.6.6"
 actix-session = "0.11.0"
 actix-utils = "3.0.1"
 actix-web = "4.9.0"
+anyhow = "1.0.100"
 async-std = "1.13.0"
 async-trait = "0.1.83"
 axum = "0.8.1"
 bon = "3.3.2"
 chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
-dioxus = "0.7.0-rc.0"
-dioxus-html = "0.7.0-rc.0"
-dioxus-server = "0.7.0-rc.0"
+dioxus = "0.7.0-rc.3"
+dioxus-html = "0.7.0-rc.3"
+dioxus-server = "0.7.0-rc.3"
 futures = "0.3.31"
 http = "1.2.0"
 leptos = "0.8.3"
