--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-    "importOrder": ["^~", "^[.]"],
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "importOrder": ["<BUILTIN_MODULES>", "<THIRD_PARTY_MODULES>", "^~", "^[.]"],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
     "jsonRecursiveSort": true,
