--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ tower-service = "0.3.3"
 tower-sessions = "0.14.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+url = "2.5.7"
 utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
 utoipa-axum = "0.2.0"
 uuid = "1.11.0"
