feat(oauth,oidc): add regex redirect patterns

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ leptos_actix = "0.8.3"
 leptos_axum = "0.8.3"
 leptos_meta = "0.8.3"
 leptos_router = "0.8.3"
+regex = "1.12.2"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
 secrecy = "0.10.3"
